# gym-anm-exp

./: .gitignore  LICENSE  README.md  constants.py  ddpg.sh  mpc.txt  parse_args.py  plot_results.py  ppo.sh  pyproject.toml  requirements.txt  run.py  setup.py
analyse_results/: Untitled.ipynb  plot.py  plt_setup.py  record_screen.py  visualize.py
analyze_results/: plot.py  plt_setup.py  record_screen.py  visualize.py
baselines/: DCOPF_returns_T2000.txt  DCOPF_returns_T3000_new_obj.txt  MPC_returns_T2000.txt  dc_opf_agent.py  mpc_agent.py
garage/: example.py
garage/data/local/experiment/ppo_pendulum_1/: variant.json  (+2 more)
mpc_policies/: run_mpc.py
notebooks/: Plot Gaspard results.ipynb
openai_b3/: README.txt  callbacks.py  check_env.py  continue_training.py  evaluation.py  hyperparameters.py  playground.py  record.py  script.sh  train.py  train_DDPG.py  train_SAC.py  train_ppo.py  utils.py  view_progress.py  visualize.py  wrappers.py
openai_baselines/: TO RUN  a2c.py  custom_evaluation.py  download_plots.sh  plot_results.py  ppo.py  run_td3.sh  sac.py  screen_procedure  td3.py
openai_baselines/td3_2020/: evaluations.npz
results/: pendulum-v0-ppo-first_run-2020.csv
rl_agents/: callbacks.py  continue_training.py  evaluation.py  hyperparameters.py  run.sh  train.py  utils.py  view_progress.py  wrappers.py
rllab/: ddpg_example.py
rrl-runs/: ddpg.sh  parse_args.py  render.py  run.py  td3.sh  utils.py
rrl-runs/rrl-results/: anm-ddpg-default-2020.csv  anm-ddpg-first_run-2020.csv  anm-ppo-first_run-2020.csv  anm-td3-first_run-2020.csv  gaspard-results.csv
(+16 files in other folders)
